# IDSiMCache

./: .gitignore  CMakeLists.txt  Makefile  testBasicInfo.cc  testLRU.cc  testMRC.cc  testNormalTrace.cc  testPyCall.py
analyzer/: trace_basic_anal.cc
analyzer/include/: trace_basic_anal.hh
cache/: ARC.cc  LFU.cc  LRU.cc
cache/include/: ARC.hh  LFU.hh  LRU.hh  cache.hh
datastructure/: list.c  list_iterator.c  list_node.c  murmur3.c  pqueue.c  splay.c
datastructure/include/: list.h  pqueue.h  splay.h
profiler/: mrc_sim.cc
profiler/include/: mrc_sim.hh
pywrapper/: py_mrc_sim_wrapper.cc
pywrapper/include/: wrapper.hh
test/: testARC.cc  testBasicInfo.cc  testLFU.cc  testLRU.cc  testMRC.cc  testNormalTrace.cc
traceloader/: block_trace.cc  normal_trace.cc
traceloader/include/: block_trace.hh  normal_trace.hh  traceloader.hh
utils/: utils.hh
